namespaces/live.cloud-platform.service.justice.gov.uk/data-platform-app-temperature-check-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: data-platform-app-temperature-check-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "temperature-check"
    cloud-platform.justice.gov.uk/application: "Data And Analysis Temperature Check Survey"
    cloud-platform.justice.gov.uk/owner: "Data and Analysis Staff Engagement Group: "
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/temperature-check"
    cloud-platform.justice.gov.uk/team-name: "temperature-check-write-team"
    cloud-platform.justice.gov.uk/review-after: ""
